--- a/progress.html
+++ b/progress.html
@@ -1,1 +1,25 @@
-<h1>Progress</h1>
+---
+layout: default
+---
+<!-- Progress Updates Grid Section -->
+    <section id="portfolio" class="bg-light-gray">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Progress Updates</h2>
+                    <h3 class="section-subheading text-muted">Some updates on progress.</h3>
+                </div>
+            </div>
+            <div class="row">
+            {% for post in site.progress_updates %}
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <img src="img/portfolio/{{ post.thumbnail }}" class="img-responsive img-centered" alt="">
+                    <div class="portfolio-caption">
+                        <h4>{{ post.title }}</h4>
+                        <p class="text-muted">{{ post.subtitle }}</p>
+                    </div>
+                </div>
+            {% endfor %}
+            </div>
+        </div>
+    </section>
