--- a/progress.html
+++ b/progress.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <!-- Progress Updates Grid Section -->
-    <section id="portfolio" class="bg-light-gray">
+    <section id="progress">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -13,7 +13,7 @@ layout: default
             <div class="row">
             {% for post in site.progress_updates %}
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <img src="img/portfolio/{{ post.thumbnail }}" class="img-responsive img-centered" alt="">
+                    <img src="/img/portfolio/{{ post.thumbnail }}" class="img-responsive img-centered" alt="">
                     <div class="portfolio-caption">
                         <h4>{{ post.title }}</h4>
                         <p class="text-muted">{{ post.subtitle }}</p>
