--- a/code_and_tech.html
+++ b/code_and_tech.html
@@ -2,5 +2,10 @@
 layout: default
 ---
 <section id='code-and-tech'>
-  <h1>Code and tech</h1>
+  <h1 class="text-center">Code and tech</h1>
+  <div class="container">
+    <div class="row">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam ea temporibus expedita sunt accusamus placeat, perferendis vitae? Praesentium, aut voluptas error ullam delectus in nobis aperiam fugit iste! Velit, vel.</p>
+    </div>
+  </div>
 </section>
