--- a/team.html
+++ b/team.html
@@ -2,5 +2,94 @@
 layout: default
 ---
 <section id='team'>
-  <h1>Team and partners</h1>
+  <h1 class="team-title text-center">Team and partners</h1>
+
+
+  <h2 class="team-subtitle text-center">Partners</h2>
+  <div class="container team">
+    <div class="row">
+      <div class="col-xs-12 col-sm-6 team-member">
+        <img src="/img/team/1.jpg" alt="" class="img-responsive img-circle team-image">
+        <h4 class="text-center">Person #1</h4>
+        <p class="text-muted text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, totam vero reprehenderit, culpa et ex numquam ullam facere labore sunt rem dolorum earum quas quibusdam consequuntur doloribus similique dolore nostrum.</p>
+      </div>
+
+      <div class="col-xs-12 col-sm-6 team-member">
+        <img src="/img/team/2.jpg" alt="" class="img-responsive img-circle team-image">
+        <h4 class="text-center">Person #2</h4>
+        <p class="text-muted text-center">Role here</p>
+      </div>
+    </div>
+      
+    <div class="row">
+      <div class="col-xs-12 col-sm-6 team-member">
+        <img src="/img/team/1.jpg" alt="" class="img-responsive img-circle team-image">
+        <h4 class="text-center">Person #1</h4>
+        <p class="text-muted text-center">Role here</p>
+      </div>
+
+      <div class="col-xs-12 col-sm-6 team-member">
+        <img src="/img/team/3.jpg" alt="" class="img-responsive img-circle team-image">
+        <h4 class="text-center">Person #3</h4>
+        <p class="text-muted text-center">Role here</p>
+      </div>
+
+    </div>
+    <div class="row">
+      <div class="col-xs-12 col-sm-6 team-member">
+        <img src="/img/team/2.jpg" alt="" class="img-responsive img-circle team-image">
+        <h4 class="text-center">Person #2</h4>
+        <p class="text-muted text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, nemo iure iusto laborum assumenda eveniet amet veniam quasi sunt hic magnam illum magni repellat ab nam quia laudantium, harum atque?</p>
+      </div>
+      <div class="col-xs-12 col-sm-6 team-member">
+        <img src="/img/team/3.jpg" alt="" class="img-responsive img-circle team-image">
+        <h4 class="text-center">Person #3</h4>
+        <p class="text-muted text-center">Role here</p>
+      </div>
+    </div>
+  </div>
+
+  <h2 class="team-subtitle text-center">Team</h2>
+  <div class="container team">
+    <div class="row">
+      <div class="col-xs-12 col-sm-6 team-member">
+        <img src="/img/team/1.jpg" alt="" class="img-responsive img-circle team-image">
+        <h4 class="text-center">Person #1</h4>
+        <p class="text-muted text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, totam vero reprehenderit, culpa et ex numquam ullam facere labore sunt rem dolorum earum quas quibusdam consequuntur doloribus similique dolore nostrum.</p>
+      </div>
+
+      <div class="col-xs-12 col-sm-6 team-member">
+        <img src="/img/team/2.jpg" alt="" class="img-responsive img-circle team-image">
+        <h4 class="text-center">Person #2</h4>
+        <p class="text-muted text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus saepe temporibus veniam culpa laboriosam doloribus commodi sit similique voluptatibus fugit, quisquam molestias illo quia ut sed provident eius, deserunt eos.</p>
+      </div>
+    </div>
+      
+    <div class="row">
+      <div class="col-xs-12 col-sm-6 team-member">
+        <img src="/img/team/1.jpg" alt="" class="img-responsive img-circle team-image">
+        <h4 class="text-center">Person #1</h4>
+        <p class="text-muted text-center">Role here</p>
+      </div>
+
+      <div class="col-xs-12 col-sm-6 team-member">
+        <img src="/img/team/3.jpg" alt="" class="img-responsive img-circle team-image">
+        <h4 class="text-center">Person #3</h4>
+        <p class="text-muted text-center">Role here</p>
+      </div>
+
+    </div>
+    <div class="row">
+      <div class="col-xs-12 col-sm-6 team-member">
+        <img src="/img/team/2.jpg" alt="" class="img-responsive img-circle team-image">
+        <h4 class="text-center">Person #2</h4>
+        <p class="text-muted text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, nemo iure iusto laborum assumenda eveniet amet veniam quasi sunt hic magnam illum magni repellat ab nam quia laudantium, harum atque?</p>
+      </div>
+      <div class="col-xs-12 col-sm-6 team-member">
+        <img src="/img/team/3.jpg" alt="" class="img-responsive img-circle team-image">
+        <h4 class="text-center">Person #3</h4>
+        <p class="text-muted text-center">Role here</p>
+      </div>
+    </div>
+  </div>
 </section>
