Get menu working, remove js, fix post layout and more

--- a/code_and_tech.html
+++ b/code_and_tech.html
@@ -1,11 +1,24 @@
 ---
 layout: default
 ---
-<section id='code-and-tech'>
-  <h1 class="text-center">Code and tech</h1>
+<header>
+    <div class="container">
+      <div class="intro-text headline">
+        <div class="intro-heading">
+          Code and tech
+        </div>
+      </div>
+    </div>
+  </header>
+<div id='code-and-tech'>
+
+  
   <div class="container">
     <div class="row">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam ea temporibus expedita sunt accusamus placeat, perferendis vitae? Praesentium, aut voluptas error ullam delectus in nobis aperiam fugit iste! Velit, vel.</p>
+      <div class="col-sm-12 col-md-offset-1 col-md-10">
+        <h3 class="text-center headline">Title here</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam ea temporibus expedita sunt accusamus placeat, perferendis vitae? Praesentium, aut voluptas error ullam delectus in nobis aperiam fugit iste! Velit, vel.</p>
+      </div>
     </div>
   </div>
-</section>
+</div>
