--- a/progress.html
+++ b/progress.html
@@ -18,10 +18,17 @@ layout: default
                 <div class="col-xs-12 col-sm-8 post-content">
                     <h4>{{ post.title }}</h4>
                     <p class="text-muted">{{ post.subtitle }}</p>
+                    <p>{{post.excerpt}}</p>
                     <a href="{{post.url}}">Read more</a>
                 </div>
             </div>
             {% endfor %}
+            <div>
+                {{paginator.per_page}}
+                {% if  paginator.next_page %}
+                <a href="{{paginator.next_page_path}}">More </a>
+                {% endif %}
+            </div>
             </div>
         </div>
     </section>
