--- a/progress.html
+++ b/progress.html
@@ -11,24 +11,18 @@ layout: default
                 </div>
             </div>
             <div>
-            {% for post in site.progress_updates %}
-            <div class="post row">
+                {% for post in site.progress_updates %}
+                <div class="post row">
 
-                <img src="/img/portfolio/{{ post.thumbnail }}" class="cols-xs-12 col-sm-4 img-responsive post-img" alt="">
-                <div class="col-xs-12 col-sm-8 post-content">
-                    <h4>{{ post.title }}</h4>
-                    <p class="text-muted">{{ post.subtitle }}</p>
-                    <p>{{post.excerpt}}</p>
-                    <a href="{{post.url}}">Read more</a>
+                    <img src="/img/portfolio/{{ post.img }}" class="cols-xs-12 col-sm-4 img-responsive post-img" alt="">
+                    <div class="col-xs-12 col-sm-8 post-content">
+                        <h4>{{ post.title }}</h4>
+                        <p class="text-muted">{{ post.subtitle }}</p>
+                        <p>{{post.excerpt}}</p>
+                        <a href="{{post.url}}">Read more</a>
+                    </div>
                 </div>
-            </div>
-            {% endfor %}
-            <div>
-                {{paginator.per_page}}
-                {% if  paginator.next_page %}
-                <a href="{{paginator.next_page_path}}">More </a>
-                {% endif %}
-            </div>
+                {% endfor %}
             </div>
         </div>
     </section>
