--- a/team.html
+++ b/team.html
@@ -9,13 +9,13 @@ layout: default
   <div class="container team">
     <div class="row">
       <div class="col-xs-12 col-sm-6 team-member">
-        <img src="/img/team/1.jpg" alt="" class="img-responsive img-circle team-image">
+        <img src="/img/core/1.png" alt="" class="img-responsive  team-image">
         <h4 class="text-center">Person #1</h4>
         <p class="text-muted text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, totam vero reprehenderit, culpa et ex numquam ullam facere labore sunt rem dolorum earum quas quibusdam consequuntur doloribus similique dolore nostrum.</p>
       </div>
 
       <div class="col-xs-12 col-sm-6 team-member">
-        <img src="/img/team/2.jpg" alt="" class="img-responsive img-circle team-image">
+        <img src="/img/core/2.png" alt="" class="img-responsive  team-image">
         <h4 class="text-center">Person #2</h4>
         <p class="text-muted text-center">Role here</p>
       </div>
@@ -23,13 +23,13 @@ layout: default
       
     <div class="row">
       <div class="col-xs-12 col-sm-6 team-member">
-        <img src="/img/team/1.jpg" alt="" class="img-responsive img-circle team-image">
+        <img src="/img/core/1.png" alt="" class="img-responsive  team-image">
         <h4 class="text-center">Person #1</h4>
         <p class="text-muted text-center">Role here</p>
       </div>
 
       <div class="col-xs-12 col-sm-6 team-member">
-        <img src="/img/team/3.jpg" alt="" class="img-responsive img-circle team-image">
+        <img src="/img/core/3.png" alt="" class="img-responsive  team-image">
         <h4 class="text-center">Person #3</h4>
         <p class="text-muted text-center">Role here</p>
       </div>
@@ -37,29 +37,31 @@ layout: default
     </div>
     <div class="row">
       <div class="col-xs-12 col-sm-6 team-member">
-        <img src="/img/team/2.jpg" alt="" class="img-responsive img-circle team-image">
+        <img src="/img/core/2.png" alt="" class="img-responsive  team-image">
         <h4 class="text-center">Person #2</h4>
         <p class="text-muted text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, nemo iure iusto laborum assumenda eveniet amet veniam quasi sunt hic magnam illum magni repellat ab nam quia laudantium, harum atque?</p>
       </div>
       <div class="col-xs-12 col-sm-6 team-member">
-        <img src="/img/team/3.jpg" alt="" class="img-responsive img-circle team-image">
+        <img src="/img/core/3.png" alt="" class="img-responsive  team-image">
         <h4 class="text-center">Person #3</h4>
         <p class="text-muted text-center">Role here</p>
       </div>
     </div>
   </div>
 
+
+
   <h2 class="team-subtitle text-center">Team</h2>
   <div class="container team">
     <div class="row">
       <div class="col-xs-12 col-sm-6 team-member">
-        <img src="/img/team/1.jpg" alt="" class="img-responsive img-circle team-image">
+        <img src="/img/core/1.png" alt="" class="img-responsive  team-image">
         <h4 class="text-center">Person #1</h4>
         <p class="text-muted text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, totam vero reprehenderit, culpa et ex numquam ullam facere labore sunt rem dolorum earum quas quibusdam consequuntur doloribus similique dolore nostrum.</p>
       </div>
 
       <div class="col-xs-12 col-sm-6 team-member">
-        <img src="/img/team/2.jpg" alt="" class="img-responsive img-circle team-image">
+        <img src="/img/core/2.png" alt="" class="img-responsive  team-image">
         <h4 class="text-center">Person #2</h4>
         <p class="text-muted text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus saepe temporibus veniam culpa laboriosam doloribus commodi sit similique voluptatibus fugit, quisquam molestias illo quia ut sed provident eius, deserunt eos.</p>
       </div>
@@ -67,13 +69,13 @@ layout: default
       
     <div class="row">
       <div class="col-xs-12 col-sm-6 team-member">
-        <img src="/img/team/1.jpg" alt="" class="img-responsive img-circle team-image">
+        <img src="/img/core/1.png" alt="" class="img-responsive  team-image">
         <h4 class="text-center">Person #1</h4>
         <p class="text-muted text-center">Role here</p>
       </div>
 
       <div class="col-xs-12 col-sm-6 team-member">
-        <img src="/img/team/3.jpg" alt="" class="img-responsive img-circle team-image">
+        <img src="/img/core/3.png" alt="" class="img-responsive  team-image">
         <h4 class="text-center">Person #3</h4>
         <p class="text-muted text-center">Role here</p>
       </div>
@@ -81,12 +83,12 @@ layout: default
     </div>
     <div class="row">
       <div class="col-xs-12 col-sm-6 team-member">
-        <img src="/img/team/2.jpg" alt="" class="img-responsive img-circle team-image">
+        <img src="/img/core/2.png" alt="" class="img-responsive  team-image">
         <h4 class="text-center">Person #2</h4>
         <p class="text-muted text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, nemo iure iusto laborum assumenda eveniet amet veniam quasi sunt hic magnam illum magni repellat ab nam quia laudantium, harum atque?</p>
       </div>
       <div class="col-xs-12 col-sm-6 team-member">
-        <img src="/img/team/3.jpg" alt="" class="img-responsive img-circle team-image">
+        <img src="/img/core/3.png" alt="" class="img-responsive  team-image">
         <h4 class="text-center">Person #3</h4>
         <p class="text-muted text-center">Role here</p>
       </div>
