john image, changed upload dir

--- a/super-secret-image-upload.html
+++ b/super-secret-image-upload.html
@@ -18,7 +18,7 @@
   Created image: <span id='imageId'></span>
 </div>
 <script type="text/javascript">  
-  var folderName = 'disarm-web';
+  var folderName = 'disarm-website';
   cloudinary.openUploadWidget({ cloud_name: 'disarm', upload_preset: 'gn7jsrai', folder: folderName}, 
     function(error, result) { console.log(error, result) });
   $(document).on('cloudinarywidgetsuccess', function(e, data) {
