--- a/code_and_tech.html
+++ b/code_and_tech.html
@@ -16,8 +16,7 @@ layout: default
   <div class="container">
     <div class="row">
       <div class="col-sm-12 col-md-offset-1 col-md-10">
-        <h3 class="text-center headline">Title here</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam ea temporibus expedita sunt accusamus placeat, perferendis vitae? Praesentium, aut voluptas error ullam delectus in nobis aperiam fugit iste! Velit, vel.</p>
+        <p>DiSARM is an open source project. As soon as code is ready to be shared we will post links to repositories here</p>
       </div>
     </div>
   </div>
