--- a/code_and_tech.html
+++ b/code_and_tech.html
@@ -11,6 +11,15 @@ layout: default
     </div>
   </header>
 <div id='code-and-tech' class="codetech">
+<section id='summary_2016'>
+  <div class="container">
+  
+    <div class="col-sm-12 col-md-offset-1 col-md-10">
+      <p>DiSARM is an open source project. As soon as code is ready to be shared we will post links to repositories here</p>
+    </div>
+
+  </div>
+</section>
 
 
 </div>
