add contact details

--- a/code_and_tech.html
+++ b/code_and_tech.html
@@ -16,6 +16,10 @@ layout: default
   
     <div class="col-sm-12 col-md-offset-1 col-md-10">
       <p>DiSARM is an open source project. As soon as code is ready to be shared we will post links to repositories here</p>
+      <p>
+        For more information on the project please contact Hugh Sturrock 
+        <a href="mailto:hugh.sturrock@ucsf.edu">hugh.sturrock@ucsf.edu</a>
+      </p>
     </div>
 
   </div>
