--- a/updates.html
+++ b/updates.html
@@ -7,7 +7,7 @@ published: true
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-          <h2 class="section-heading">Progress Updates</h2>
+          <h2 class="section-heading">Updates</h2>
           <h3 class="section-subheading text-muted">Some updates on progress.</h3>
       </div>
     </div>
