--- a/updates.html
+++ b/updates.html
@@ -3,7 +3,7 @@ layout: default
 published: true
 ---
 <!-- Progress Updates Grid Section -->
-<section id="updates">
+<section id="progress">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
