source code links

--- a/code_and_tech.html
+++ b/code_and_tech.html
@@ -4,27 +4,26 @@ layout: default
 
 <header>
     <div class="container">
-      <div class="intro-text headline">
-        <div class="intro-heading">
-          Code and tech
+        <div class="intro-text headline">
+            <div class="intro-heading">
+                Code and tech
+            </div>
         </div>
-      </div>
     </div>
-  </header>
+</header>
 <div id='code-and-tech' class="codetech">
-<section id='summary_2016'>
-  <div class="container">
-  
-    <div class="col-sm-12 col-md-offset-1 col-md-10">
-      <p>DiSARM is an open source project. As soon as code is ready to be shared we will post links to repositories here</p>
-      <p>
-        For more information on the project please contact Hugh Sturrock 
-        <a href="mailto:hugh.sturrock@ucsf.edu">hugh.sturrock@ucsf.edu</a>
-      </p>
-    </div>
-
-  </div>
-</section>
-
-
+    <section id='summary_2016'>
+        <div class="container">
+            <div class="col-sm-12 col-md-offset-1 col-md-10">
+                <p>DiSARM is an open source project. The code can be accessed via
+                    <a href="https://github.com/disarm-platform/disarm-app">App</a> and
+                    <a href="https://github.com/disarm-platform/disarm-server">Server</a>
+                </p>
+                <p>
+                    For more information on the project please contact Hugh Sturrock
+                    <a href="mailto:hugh.sturrock@ucsf.edu">hugh.sturrock@ucsf.edu</a>
+                </p>
+            </div>
+        </div>
+    </section>
 </div>
