--- a/code_and_tech.html
+++ b/code_and_tech.html
@@ -15,9 +15,10 @@ layout: default
     <section id='summary_2016'>
         <div class="container">
             <div class="col-sm-12 col-md-offset-1 col-md-10">
-                <p>DiSARM is an open source project. The code can be accessed via
-                    <a href="https://github.com/disarm-platform/disarm-app">App</a> and
-                    <a href="https://github.com/disarm-platform/disarm-server">Server</a>
+                <p>DiSARM is an open source project. The code can be accessed via the 
+                    <a href="https://github.com/disarm-platform/disarm-app">app</a> and
+                    <a href="https://github.com/disarm-platform/disarm-server">server</a>
+                    repos
                 </p>
                 <p>
                     For more information on the project please contact Hugh Sturrock
