--- a/code_and_tech.html
+++ b/code_and_tech.html
@@ -18,7 +18,7 @@ layout: default
                 <p>DiSARM is an open source project. The code can be accessed via the 
                     <a href="https://github.com/disarm-platform/disarm-app">app</a> and
                     <a href="https://github.com/disarm-platform/disarm-server">server</a>
-                    repos
+                    repos.
                 </p>
                 <p>
                     For more information on the project please contact Hugh Sturrock
