Updating blurb on docs page

--- a/docs.html
+++ b/docs.html
@@ -7,7 +7,7 @@ layout: default
     <section id='docs'>
         <h1>API Documentation</h1>
 
-        <p>Insert some general info about what this is. And how to run it?</p>
+        <p>Below is a list of alorithms and functions available via the DiSARM API. For each function, there are links to the specifications readme, which provides info on how to run the function via an HTTP request, as well as links to a simple UI to run the function and the function repository on GitHub. If you bump into any issues on any of the functions, please log an issue on the function repository (if you know how) or email hugh.sturrock@ucsf.edu. </p>
 
         <p><pre>curl container_url/ params</pre></p>
     
