trying to add space..

--- a/docs.html
+++ b/docs.html
@@ -22,7 +22,7 @@ layout: default
     <h3>Functions available</h3>
 
         {% for algo in site.algos %}
-            <h4>{{algo.title}}</h4>
+            <p><h4>{{algo.title}}</h4></p>
             <p>{{algo.description}}</p>
             <a href="{{algo.docs_link}}">Docs</a> |
             <a href="{{algo.ui_link}}">UI</a> |
