update docs wiki links, and email address

--- a/docs.html
+++ b/docs.html
@@ -16,8 +16,13 @@ layout: default
     https://faas.srv.disarm.io/function/longrun</pre>
     
     <p>
-        See <a href='https://github.com/disarm-platform/functions-for-openfaas/wiki'>this wiki</a> 
-        for general instructions on running DiSARM API functions
+        There are detailed instructions for running the functions in 
+            <a href="https://github.com/disarm-platform/functions-for-openfaas/wiki/Running-deployed-functions-for-development-and-testing">development</a>
+            (e.g. using <em>curl</em>)
+            and in 
+            <a href="https://github.com/disarm-platform/functions-for-openfaas/wiki/Running-deployed-functions-in-production">production</a>
+            (e.g. from Python).
+            For more general instructions and background information, see <a href='https://github.com/disarm-platform/functions-for-openfaas/wiki'>the project wiki</a>.
     </p>
 
         <h2>Algorithm-specific docs</h2>
@@ -31,7 +36,7 @@ layout: default
         
         <p>
             If you bump into any issues on any of the functions, please log an issue on the 
-            function repository (if you know how) or email hugh.sturrock@ucsf.edu. 
+            function repository (if you know how) or email <a href='mailto:hugh.sturrock@ucsf.edu'>hugh.sturrock@ucsf.edu</a>. 
         </p>
 
         {% for algo in site.algos %}
