--- a/updates.html
+++ b/updates.html
@@ -8,7 +8,7 @@ layout: default
     <div class="row">
       <div class="col-lg-12 text-center">
           <h2 class="section-heading">Updates</h2>
-          <h3 class="section-subheading text-muted">Some updates on progress.</h3>
+          <h3 class="section-subheading text-muted"></h3>
       </div>
     </div>
     <div>
